added push, put, delete, get, to all rescources
