# src/openapi_server/models/health_post_request.py
@@ -1,9 +1,9 @@
 # coding: utf-8
 
 """
-    Matchmaking & Notification Service
+    Matchmaking and Notification Service API
 
-    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+    API-first definition for the Matchmaking and Notification microservice. Each resource (matches, offers, health) includes GET, POST, PUT, and DELETE methods. These endpoints are defined for design purposes only — no implementation is required. 
 
     The version of the OpenAPI document: 1.0.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
@@ -20,29 +20,19 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict, StrictStr, field_validator
+from pydantic import BaseModel, ConfigDict, StrictStr
 from typing import Any, ClassVar, Dict, List, Optional
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class OffersIdPutRequest(BaseModel):
+class HealthPostRequest(BaseModel):
     """
-    OffersIdPutRequest
+    HealthPostRequest
     """ # noqa: E501
-    status: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["status"]
-
-    @field_validator('status')
-    def status_validate_enum(cls, value):
-        """Validates the enum"""
-        if value is None:
-            return value
-
-        if value not in ('accepted', 'declined', 'expired',):
-            raise ValueError("must be one of enum values ('accepted', 'declined', 'expired')")
-        return value
+    message: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["message"]
 
     model_config = {
         "populate_by_name": True,
@@ -62,7 +52,7 @@ class OffersIdPutRequest(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of OffersIdPutRequest from a JSON string"""
+        """Create an instance of HealthPostRequest from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -85,7 +75,7 @@ class OffersIdPutRequest(BaseModel):
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of OffersIdPutRequest from a dict"""
+        """Create an instance of HealthPostRequest from a dict"""
         if obj is None:
             return None
 
@@ -93,7 +83,7 @@ class OffersIdPutRequest(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "status": obj.get("status")
+            "message": obj.get("message")
         })
         return _obj
 
